--- a/Lumo/Views/Diary/Index.cshtml
+++ b/Lumo/Views/Diary/Index.cshtml
@@ -22,8 +22,8 @@
     <div class="text-left mb-4">
         <button id="toggleEntryForm"
                 class="btn btn-primary"
-                data-text-add="@Localizer["AddNewEntry"]"
-                data-text-hide="@Localizer["HideForm"]">
+                data-text-add="@Localizer["HideForm"]"
+                data-text-hide="@Localizer["AddNewEntry"]">
             @Localizer["AddNewEntry"]
         </button>
     </div>
