--- a/Lumo/Views/Statistics/Index.cshtml
+++ b/Lumo/Views/Statistics/Index.cshtml
@@ -131,9 +131,9 @@
                         datasets: [{
                             data: data.tagUsage.map(t => t.count),
         backgroundColor: [
-                        '#28a745', '#1e7e34', '#a5d6a7', '#4caf50', '#81c784', // Zielenie (Twoja baza)
-                        '#20c997', '#0dcaf0', '#0d6efd', '#6610f2', '#6f42c1', // Morskie, niebieskie i fiolety
-                        '#d63384', '#dc3545', '#fd7e14', '#ffc107', '#adb5bd'  // Róż, czerwień, pomarańcz, żółć, szary
+                        '#28a745', '#1e7e34', '#a5d6a7', '#4caf50', '#81c784', 
+                        '#20c997', '#0dcaf0', '#0d6efd', '#6610f2', '#6f42c1',
+                        '#d63384', '#dc3545', '#fd7e14', '#ffc107', '#adb5bd' 
                     ],
                             borderWidth: 0
                         }]
