--- a/Lumo/wwwroot/css/site.css
+++ b/Lumo/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 /* =========================================
-   MOTYW: LUMO NATURE (Green & Paper)
+   MOTYW
    ========================================= */
 
 :root {
@@ -96,7 +96,6 @@ body {
    KOMPONENTY Z ANIMACJ¥
    ========================================= */
 
-/* Dodajemy transition do wszystkiego, co ma zmieniaæ kolor */
 .card, .navbar, .footer, .form-control, .btn, .nav-link {
     transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease, box-shadow 0.5s ease !important;
 }
@@ -257,7 +256,6 @@ footer {
     color: var(--main-color) !important;
     background-color: transparent !important;
     font-weight: 600;
-    transition: all 0.3s ease-in-out !important;
 }
 
     .btn-lumo:hover {
